Add player roles
